--- a/preamble/general/colors.tex
+++ b/preamble/general/colors.tex
@@ -19,4 +19,8 @@
 \definecolor{Gray80}{gray}{0.8}
 \definecolor{Gray90}{gray}{0.9}
 
+\definecolor{gold}{RGB}{255,215,0}   % or
+\definecolor{silver}{RGB}{192,192,192} % argent
+
+
 \definecolor{LightGrayFill}{gray}{0.97}
