--- a/thesis.tex
+++ b/thesis.tex
@@ -31,6 +31,17 @@
     chapters/Introduction,
     chapters/QuickSummary,
     chapters/Appendix,
+    chapters/1-DC,
+    chapters/2-AC,
+    chapters/3-AOP,
+    chapters/4-Digital,
+    chapters/5-Systemes,
+    chapters/6-RF,
+    chapters/7-Transmision,
+    chapters/8-Micro-Ondes,
+    chapters/9-Communication,
+    chapters/10-Normes,
+    chapters/11-Advanced,
 }
 
 \begin{document}
@@ -47,10 +58,18 @@
 \include{chapters/QuickSummary}
 
 \mainmatter
+\include{chapters/1-DC}
+\include{chapters/2-AC}
+\include{chapters/3-AOP}
+\include{chapters/4-Digital}
+\include{chapters/5-Systemes}
+\include{chapters/6-RF}
+\include{chapters/7-Transmision}
+\include{chapters/8-Micro-Ondes}
+\include{chapters/9-Communication}
+\include{chapters/10-Normes}
+\include{chapters/11-Advanced}
 
-
-\appendix
-\include{chapters/Appendix}
 
 \backmatter
 \references
