add glossary entry

--- a/preamble/glossary.tex
+++ b/preamble/glossary.tex
@@ -1,17 +1,17 @@
-% FPGA
-\newglossaryentry{example_acro}{
-    name={Example with acronym},
+% syntonisation
+\newglossaryentry{syntonisation}{
+    name={syntonisation},
     description={
-        An example with acronym \gls{ex_acro}.
+        Ajuster deux circuits à la même fréquence.
     }
 }
 
 % VHDL
-\newglossaryentry{example}{
-    name={example},
-    description={
-        Simple example of a glossary entry.
-    }
-}
+%\newglossaryentry{example}{
+%    name={example},
+%    description={
+%        Simple example of a glossary entry.
+%    }
+%}
 
-\newacronym{ex_acro}{acronym}{Example of an acronym entry}
+%\newacronym{ex_acro}{acronym}{Example of an acronym entry}
