--- a/thesis.tex
+++ b/thesis.tex
@@ -42,6 +42,7 @@
     chapters/9-Communication,
     chapters/10-Normes,
     chapters/11-Advanced,
+    chapters/Appendix
 }
 
 \begin{document}
@@ -70,6 +71,8 @@
 \include{chapters/10-Normes}
 \include{chapters/11-Advanced}
 
+\appendix
+\include{chapters/Appendix}
 
 \backmatter
 \references
