Add Prliminaries chapter

--- a/preamble/main.tex
+++ b/preamble/main.tex
@@ -10,6 +10,10 @@
 
 \usepackage{pgfplots}
 
+% circuitikz
+\usepackage[
+    europeanresistors
+]{circuitikz}
 
 \usepackage[dvipsnames]{xcolor}
 
@@ -69,12 +73,11 @@
 
 \usepackage[
     nonumberlist,
-    % toc, 
-    section=section, 
+    % toc,
+    section=section,
     acronyms,
     style=list]{glossaries-extra}
 
 
 \makeglossaries
 \loadglsentries{preamble/glossary.tex}
-
