--- a/thesis.tex
+++ b/thesis.tex
@@ -31,6 +31,7 @@
     chapters/Introduction,
     chapters/QuickSummary,
     chapters/Appendix,
+    chapters/0-preliminaries,
     chapters/1-DC,
     chapters/2-AC,
     chapters/3-AOP,
@@ -59,6 +60,7 @@
 \include{chapters/QuickSummary}
 
 \mainmatter
+\include{chapters/0-preliminaries}
 \include{chapters/1-DC}
 \include{chapters/2-AC}
 \include{chapters/3-AOP}
