double column layout by default

--- a/preamble/general/hyperref.tex
+++ b/preamble/general/hyperref.tex
@@ -17,6 +17,8 @@
     citebordercolor=CiteColor,
     linkbordercolor=LinkColor,
     urlbordercolor=UrlColor,
+    pdfstartview=FitH,
+    pdfpagelayout=TwoPageRight,
     % PDF metadata
     pdfauthor=\ThesisAuthorPlaintext,
     pdftitle=\ThesisTitlePlaintext,
