setup babel to french

--- a/preamble/data.tex
+++ b/preamble/data.tex
@@ -1,5 +1,5 @@
 %% Type de mémoire : licence, master, doctorat
-\NewExpandableDocumentCommand{\ThesisType}{}{L2 ISTN}
+\NewExpandableDocumentCommand{\ThesisType}{}{L3 EEEA}
 
 %% Titre du mémoire (exactement comme dans le sujet officiel)
 \NewExpandableDocumentCommand{\ThesisTitle}{}{Électronique et Télécommunications}
@@ -14,7 +14,7 @@
 }
 
 %% Auteur du mémoire
-\NewExpandableDocumentCommand{\ThesisAuthor}{}{\textcolor{red}{Alex Videcoq}}
+\NewExpandableDocumentCommand{\ThesisAuthor}{}{\textcolor{red}{Jaggi}}
 %% Version en texte brut pour les métadonnées PDF
 \NewExpandableDocumentCommand{\ThesisAuthorPlaintext}{}{Alex Videcoq}
 
@@ -33,7 +33,7 @@
 \NewDocumentCommand{\DeptType}{}{UFR}
 
 %% Directeur de mémoire : nom, prénom et titres
-\NewDocumentCommand{\Supervisor}{}{\textcolor{red}{Prof. John Doe}}
+\NewDocumentCommand{\Supervisor}{}{\textcolor{red}{Prof. Proton}}
 %% Co-directeur de mémoire : nom, prénom et titres (décommenter si applicable)
 % \NewDocumentCommand{\CoSupervisor}{}{Prof. Matthieu Davy}
 
@@ -41,7 +41,7 @@
 \NewDocumentCommand{\SupervisorsDepartment}{}{\textcolor{red}{ISTIC}}
 
 %% Filière et spécialisation
-\NewDocumentCommand{\StudyProgramme}{}{\textcolor{red}{Notes personnelles}}
+\NewDocumentCommand{\StudyProgramme}{}{\textcolor{red}{\'Electronique et Télécommunications}}
 
 %% Résumé (80-200 mots recommandés)
 \NewDocumentCommand{\Abstract}{}{
