--- a/preamble/general/typesetting.tex
+++ b/preamble/general/typesetting.tex
@@ -1,6 +1,7 @@
 %%% Typesetting, figures, tables, etc.
 
 \ifpdftex % only for pdfLaTeX
+    \usepackage[utf8]{inputenc}
     \usepackage[T1]{fontenc} % better support for accented characters
 \fi
 \usepackage{lmodern} % Latin Modern fonts
