--- a/preamble/main.tex
+++ b/preamble/main.tex
@@ -1,5 +1,4 @@
 %%% Preamble
-
 \usepackage{tikz}
 \usetikzlibrary{decorations.fractals}
 \usetikzlibrary{lindenmayersystems}
@@ -30,6 +29,9 @@
 %% Typesetting, figures, tables, etc.
 \input{preamble/general/typesetting}
 \input{preamble/general/floats}
+
+\usepackage[french, shorthands=off]{babel}
+\DocumentMetadata{lang=fr}
 
 %% Hyperlinks, PDF metadata
 \input{preamble/general/hyperref}
