--- a/thesis.tex
+++ b/thesis.tex
@@ -28,6 +28,7 @@
 %% NOTE: If no files are uncommented, all files are included
 \includeonlysmart{
     frontmatter/title,
+    frontmatter/dedication,
     chapters/Introduction,
     chapters/QuickSummary,
     chapters/Appendix,
@@ -51,7 +52,7 @@
 \frontmatter
 \include{frontmatter/title}
 % \include{frontmatter/declaration}
-% \include{frontmatter/dedication}
+\include{frontmatter/dedication}
 % \include{frontmatter/information}
 
 \contentsandlists
