--- a/frontmatter/dedication.tex
+++ b/frontmatter/dedication.tex
@@ -4,9 +4,9 @@
 { \slshape
     Ce document est d\'edi\'e \`a la pauvre L3 EEEA qui a souffert pendant des mois de cours remplis de formules, de sch\'emas, et de concepts abstraits. Qu'elle trouve ici un peu de r\'econfort et de clart\'e dans ce monde parfois obscur de l'\'electronique. Ici pas de ``Mais vous l'avez d\'ej\`a vu en L2'' ou de ``C'est trivial !'', mais une explication claire et concise, avec des exemples concrets et des illustrations pour aider \`a comprendre. Que ce document soit un phare dans la nuit pour tous ceux qui cherchent \`a apprivoiser l'\'electronique, et qu'il leur apporte la confiance et la comp\'etence n\'ecessaires pour r\'eussir dans ce domaine fascinant.\par
     \bigskip
-    Merci \`a tous$\cdot$tes ceux$\cdot$lles qui m'ont aid\'ee, encourag\'ee, et support\'ee pendant la r\'ealisation de ce projet. \emph{Delfred353} pour la relecture et \emph{Shadow the magic math cat} pour son aide en \LaTeX.\par
+    Merci \`a tous$\cdot$tes ceux$\cdot$lles qui m'ont aid\'ee, encourag\'ee et support\'ee pendant la r\'ealisation de ce projet. \emph{Delfred353} et \emph{Noemimolette} pour la relecture, mais aussi \`a \emph{Shadow the magic math cat} pour son aide en \LaTeX.\par
     \bigskip
-    Je tiens aussi a mentionner \emph{Jon\'a\v{s} Dujava} qui a r\'ealis\'e un travail remarquable avec la template du document \autocite{TeXtured}
+    Je tiens aussi \`a mentionner \emph{Jon\'a\v{s} Dujava} qui a r\'ealis\'e un travail remarquable avec la template du document \autocite{TeXtured}
     --- Jaggi
 }
 
