add power in AC

--- a/preamble/main.tex
+++ b/preamble/main.tex
@@ -2,11 +2,13 @@
 \usepackage{tikz}
 \usetikzlibrary{decorations.fractals}
 \usetikzlibrary{lindenmayersystems}
+\usetikzlibrary{angles}
 \pgfdeclarelindenmayersystem{cantor set}{
   \rule{F -> FfF}
   \rule{f -> fff}
 }
 \usepackage{tkz-euclide}
+
 
 \usepackage{pgfplots}
 
