--- a/preamble/bibliography.bib
+++ b/preamble/bibliography.bib
@@ -5,3 +5,10 @@
     url           = {https://overleaf.com/latex/templates/textured/zwtzzwgddbsh},
     github        = {jdujava/TeXtured},
 }
+
+@online{femto-phy,
+    author        = {Jimmy Roussel},
+    title         = {Cours d'\'electrocin\'etique -- femto-physique},
+    year          = {2024},
+    url           = {https://femto-physique.fr/electrocinetique/index.php},
+}
