--- a/thesis.tex
+++ b/thesis.tex
@@ -34,16 +34,17 @@
     chapters/Appendix,
     chapters/0-preliminaries,
     chapters/1-DC,
-    chapters/2-AC,
-    chapters/3-AOP,
-    chapters/4-Digital,
-    chapters/5-Systemes,
+    chapters/2-Components,
+    chapters/3-AC,
+    chapters/4-AOP,
+    chapters/5-Digital,
     chapters/6-RF,
-    chapters/7-Transmision,
-    chapters/8-Micro-Ondes,
-    chapters/9-Communication,
-    chapters/10-Normes,
-    chapters/11-Advanced,
+    chapters/7-Systemes,
+    chapters/8-Transmision,
+    chapters/9-Micro-Ondes,
+    chapters/10-Communication,
+    chapters/11-Normes,
+    chapters/12-Advanced,
     chapters/Appendix
 }
 
@@ -63,16 +64,17 @@
 \mainmatter
 \include{chapters/0-preliminaries}
 \include{chapters/1-DC}
-\include{chapters/2-AC}
-\include{chapters/3-AOP}
-\include{chapters/4-Digital}
-\include{chapters/5-Systemes}
+\include{chapters/2-Components}
+\include{chapters/3-AC}
+\include{chapters/4-AOP}
+\include{chapters/5-Digital}
 \include{chapters/6-RF}
-\include{chapters/7-Transmision}
-\include{chapters/8-Micro-Ondes}
-\include{chapters/9-Communication}
-\include{chapters/10-Normes}
-\include{chapters/11-Advanced}
+\include{chapters/7-Systemes}
+\include{chapters/8-Transmision}
+\include{chapters/9-Micro-Ondes}
+\include{chapters/10-Communication}
+\include{chapters/11-Normes}
+\include{chapters/12-Advanced}
 
 \appendix
 \include{chapters/Appendix}
